Adicionado validacoes de usuario

--- a/src/main/resources/lang/messages_pt_BR.properties
+++ b/src/main/resources/lang/messages_pt_BR.properties
@@ -1,4 +1,6 @@
 firstName.not.blank=Por favor, informe o seu primeiro nome.
 lastName.not.blank=Por favor, informe o seu sobrenome.
+userName.regexp=Por favor, informe um nome de usuário com no mínimo 3 caracteres e no máximo 20, sendo estes letras ou números.
 email.address=Por favor, informe um endereço de email válido.
-password.regexp=Informe uma senha com no mínimo 8 caracteres, tendo pelo menos 1 letra e 1 número.
+phone.regexp=Por favor, informe o DDD e o número do seu celular.
+password.regexp=Por favor, informe uma senha com no mínimo 8 caracteres, tendo pelo menos 1 letra e 1 número.
