Configurado tipo de aplicacao como reativo e adicionado formato de datetime

--- a/src/main/resources/lang/messages_pt_BR.properties
+++ b/src/main/resources/lang/messages_pt_BR.properties
@@ -1,4 +1,4 @@
-firstName.not.blank=Por favor, informe o seu primeiro nome.
+NotBlank.user.firstName=Por favor, informe o seu primeiro nome.
 lastName.not.blank=Por favor, informe o seu sobrenome.
 userName.regexp=Por favor, informe um nome de usuário com no mínimo 3 caracteres e no máximo 20, sendo estes letras ou números.
 email.address=Por favor, informe um endereço de email válido.
