--- a/src/main/resources/lang/messages_pt_BR.properties
+++ b/src/main/resources/lang/messages_pt_BR.properties
@@ -1,6 +1,6 @@
 NotBlank.user.firstName=Por favor, informe o seu primeiro nome.
-lastName.not.blank=Por favor, informe o seu sobrenome.
-userName.regexp=Por favor, informe um nome de usuário com no mínimo 3 caracteres e no máximo 20, sendo estes letras ou números.
-email.address=Por favor, informe um endereço de email válido.
-phone.regexp=Por favor, informe o DDD e o número do seu celular.
-password.regexp=Por favor, informe uma senha com no mínimo 8 caracteres, tendo pelo menos 1 letra e 1 número.
+NotBlank.user.lastName=Por favor, informe o seu sobrenome.
+Pattern.user.userName=Por favor, informe um nome de usuário com no mínimo 3 caracteres e no máximo 20, sendo estes letras ou números.
+Email.user.email=Por favor, informe um endereço de email válido.
+Pattern.user.phone=Por favor, informe o DDD e o número do seu celular.
+Pattern.user.password=Por favor, informe uma senha com no mínimo 8 caracteres, tendo pelo menos 1 letra e 1 número.
